# Smarter

./: .gitignore  README.md  app.py  pyproject.toml  schema.sql
smarter/: __init__.py  __main__.py  about.py  admin.py  api.py  auth.py  constants.py  db.py  game.py  helpers.py  question_sets.py  questions.py  schema.sql  utility.py
smarter/static/js/: add_questions.js  join.js  login.js  otdb_browse.js  owner_view.js  play.js  pregame.js  question_set_browse.js  register.js  results.js  results_owner.js  select_otdb_questions.js  select_user_questions.js  show.js  user_browse.js  verify_questions.js
smarter/static/js/modules/: check_username.js  constants.js  list_manip.js  question_set_shared.js
smarter/templates/: add_questions.html  base.html  browsing.html  index.html  user_browse.html
smarter/templates/about/: contacts.html  index.html  license.html  opentdb.html  question_removed.html  temp_sets.html
smarter/templates/admin/: verify_questions.html
smarter/templates/auth/: login.html  register.html
smarter/templates/game/: join.html  owner_view.html  play.html  pregame.html  results.html  show.html
smarter/templates/question-sets/: add.html  add_otdb_questions.html  add_user_questions.html  browse.html
smarter/templates/questions/: add.html  add_questions.html  otdb_browse.html  user_browse.html
static/css/: styles.css
static/js/: browse.js  check_username.js  login.js  otdb_browse.js  register.js  script.js
static/js/modules/: check_username.js
templates/: add_questions.html  base.html  browse.html  index.html  login.html  opentdb.html  otdb_browse.html  register.html  user_browse.html
