[project]
name = "smarter"
version = "1.0.0"
description = "Web application for playing trivia games using Flask and the Open Trivia Database API"
dependencies = [
    "flask",
    "better_profanity",
    "flask-socketio",
]


[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
