[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "smarter"
authors = [
    {name = "Mykolas Uselis"},
]
version = "1.1.0"
description = "Self-hostable web application for playing trivia games using Flask and the Open Trivia Database API"
readme = "README.md"
requires-python = ">=3,<4"
license = "GPL-3.0-only"
license-files = ["COPYING"]
keywords = ["trivia", "question", "OpenTriviaDB", "self-hosted"]
dependencies = [
    "flask",
    "better_profanity",
    "flask-socketio",
]

[project.urls]
Source = "https://github.com/muyrety/Smarter"
Website = "https://www.uselis.eu"
